AH-2004-02-26-0: Doc:       Mention sched_conf(5) monitor=1 params setting.
                            Document improved handling of wildcard PE request.

CR-2004-02-26-0: Bugfix:    don't sleep when qevent can't open connection to
                            qmaster and signal TERM is sent
                 Changed:   qevent

SG-2004-02-26-0: Enhancem:  added halfelife_decay_list to the scheduler config
                            man page.

AA-2004-02-26-0: Bugfix:    cplx dialogue kept highlighting after closing
                 Changed:   qmon

EB-2004-02-26-0: Bugfix:    qstat -explain did not show messages
                            qalter -q <queue_pattern_which_will_never_match>
                            is not rejected. (reintroduced by AA-2004-02-21-0)
                 Changed:   qstat, sge_qmaster
                 Issue:     705, 688
                 Review:    SG 

SG-2004-02-25-1: Bugfix:    fixed the time bases for YY specification. It referes to
                            to the range of 1970 till 2069.
                 Chaged:    qacct, qsub, qalter,...
                 Issue:     709

                 
SD-2004-02-25-0: Bugfix:    Fixed file descriptor leak which caused
                            execd to run out of file descriptors
                 Changed:   execd
                 Issue:     713

AH-2004-02-25-0: Enhanc.:   Added 'default_duration' to sched_conf(5).
                 Doc:       Man pages changes for reservation scheduling.
                 Bugfix:    Wrong error message for qsub -R 
                 Issue:     694
                 Review:    AD

DT-2004-02-25-0: Bugfix:    o Fixed qconf -sq queue@hostname output.
                            o Fixed DRMAA example program
                 Issue:     701, 704
                 Changed:   DRMAA, qconf

SG-2004-02-25-0: Bugfix:    extended the scheduler check for invalid configurations.
                 Issue:     695
                 Changed:   scheduler
